--- a/README.html
+++ b/README.html
@@ -13,7 +13,7 @@ a2 = a2+c2
 /console.log(a2); \*var question =prompt ('Сколько лет КИПУ?',' ') 
 if (question!=25){ 
 alert('Не правильно!') 
-alert('Подумой!')} 
+alert('Подумай!')} 
 else { 
 alert('Молодец угадал;)') 
 alert('Проходи')}*/ 
