--- a/README.html
+++ b/README.html
@@ -1,43 +1,94 @@
-  
-//1 
-var a = 2 
-a*=2+5 
-console.log(a); 
-//2 
-var a1 = 3, c1 = 2+ ++a1 
-a1 = a1+c1 
-console.log(a1); 
-//3 
-var a2 = 3, c2= 2+a2++ 
-a2 = a2+c2 
-/console.log(a2); \*var question =prompt ('Сколько лет КИПУ?',' ') 
-if (question!=25){ 
-alert('Не правильно!') 
-alert('Подумай!')} 
-else { 
-alert('Молодец угадал;)') 
-alert('Проходи')}*/ 
-/* 
-var A =prompt ('Введи число') 
-var B =prompt ('Введи число') 
-if (A > B){ 
-C=A 
-} 
-else { 
-C=B 
-} 
-alert(C) 
-*/ 
-
-var X =prompt ('Введи число') 
-var Y =prompt ('Введи число') 
-var C 
-if (X>Y) { 
-C=X 
-X=Y 
-Y=C 
-} 
-{ 
-alert (X) 
-alert (Y) 
+<!DOCTYPE html>
+<HTML-код Ланг="Ан">
+<глава>
+ <мета кодировка="УТФ-8">
+ <мета имя="область просмотра" содержимого="ширина=устройство-ширина, начально-масштаб=1.0">
+ <мета НТТР-экв="х-УА-совместимый" содержание="т. е.=кра">
+ <название>документ</название>
+</глава>
+<тело>
+ <скрипт>
+  /* var question = prompt("в каком году ты поступил в кипу", "")
+ если (вопрос!=2018) {
+ alert ("не правильно")
+ alert ("подумай хорошо")
+  }
+  //
+  var question = prompt('В каком году поступил в КИПУ?', ' ')
+if (question != 2018)
+    alert( 'Не правильно!' )
+else
+    alert( 'Привет, первокурсник!' )
+//
+  var a = prompt("SSS", "")
+  var b = prompt("DDD", "")
+if (a>b)
+  c=a
+else
+  c=b
+alert(c);
+//
+ var x = prompt("SSS", "")
+ var y = prompt("DDD", "")
+ var c
+ if (x>y) {
+   c=x
+   x=y
+   y=c
+ }
+alert (x)
+alert (y)
+//
+var x = prompt("SSS", "")
+if (0) {
+  console.log("привет")
 }
+//
+var a = prompt("SSS", "")
+var b = prompt("DDD", "")
+var c = prompt("xq", "")
+var d
+if (a>b) {
+  d=a
+} else {
+    d=b
+} if (c>d) {
+ d=c
+}
+//
+var ageMA = +prompt("введите возраст мамы", "")
+var ageFA = +prompt("введите возраст папы", "")
+if (ageMA>ageFA) {
+  alert ("Мама старше папы")
+} else {
+  if (ageMA<ageFA){
+    alert("Папа старше мамы")
+  }
+  else  {
+    alert("одинаковый возраст")
+  }
+}*/
+//
+var n1 =+prompt("Ввод первого значения")
+var sign =prompt("Выберите действие(сложение/вычитание/умножение/деление)")
+var n2 =+prompt("ввод второго значения")
+ВАР РЭС
+если (признак=="сложение"){
+РЭС=Н1 + Н2
+предупреждение(РЭС)
+} остальное, если(вход=="вычитание"){
+ РЭС=Н1 - Н2
+ предупреждение(РЭС)
+} остальное, если(вход== "умножение"){
+ РЭС=Н1*Н2
+ предупреждение(РЭС)
+} остальное, если(вход== "деление"){
+ если(Н2>0){
+ РЭС=Н1/Н2
+   предупреждение(РЭС)}
+   еще если (Н2=="0")
+   alert("Нельзя делить на ноль")
+ }
+    </скрипт>
+</тело>
+</HTML-код>
