--- a/README.html
+++ b/README.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<HTML-код Ланг="Ан">
-<глава>
- <мета кодировка="УТФ-8">
- <мета имя="область просмотра" содержимого="ширина=устройство-ширина, начально-масштаб=1.0">
- <мета НТТР-экв="х-УА-совместимый" содержание="т. е.=кра">
- <название>документ</название>
-</глава>
-<тело>
- <скрипт>
-  /* var question = prompt("в каком году ты поступил в кипу", "")
- если (вопрос!=2018) {
- alert ("не правильно")
- alert ("подумай хорошо")
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+  <script>
+  /*  var question = prompt("в каком году ты поступил в кипу", "")
+    if (question!=2018) {
+    alert ("не правильно")
+    alert ("подумай хорошо")
   }
   //
   var question = prompt('В каком году поступил в КИПУ?', ' ')
@@ -22,6 +22,7 @@ else
 //
   var a = prompt("SSS", "")
   var b = prompt("DDD", "")
+  
 if (a>b)
   c=a
 else
@@ -43,6 +44,7 @@ var x = prompt("SSS", "")
 if (0) {
   console.log("привет")
 }
+
 //
 var a = prompt("SSS", "")
 var b = prompt("DDD", "")
@@ -58,8 +60,11 @@ if (a>b) {
 //
 var ageMA = +prompt("введите возраст мамы", "")
 var ageFA = +prompt("введите возраст папы", "")
+
 if (ageMA>ageFA) {
+
   alert ("Мама старше папы")
+  
 } else {
   if (ageMA<ageFA){
     alert("Папа старше мамы")
@@ -68,27 +73,35 @@ if (ageMA>ageFA) {
     alert("одинаковый возраст")
   }
 }*/
+   
 //
 var n1 =+prompt("Ввод первого значения")
 var sign =prompt("Выберите действие(сложение/вычитание/умножение/деление)")
 var n2 =+prompt("ввод второго значения")
-ВАР РЭС
-если (признак=="сложение"){
-РЭС=Н1 + Н2
-предупреждение(РЭС)
-} остальное, если(вход=="вычитание"){
- РЭС=Н1 - Н2
- предупреждение(РЭС)
-} остальное, если(вход== "умножение"){
- РЭС=Н1*Н2
- предупреждение(РЭС)
-} остальное, если(вход== "деление"){
- если(Н2>0){
- РЭС=Н1/Н2
-   предупреждение(РЭС)}
-   еще если (Н2=="0")
+var res
+if (sign=="сложение"){
+res=n1 + n2
+alert(res)
+} else if(sign=="вычитание"){
+ res=n1 - n2
+ alert(res)
+} else if(sign== "умножение"){
+ res=n1*n2
+ alert(res)
+} else if(sign== "деление"){
+ if(n2>0){
+   res=n1/n2
+   alert(res)}
+   else if (n2=="0")
    alert("Нельзя делить на ноль")
  }
-    </скрипт>
-</тело>
-</HTML-код>
+   
+   
+   
+   
+   
+   
+   
+    </script>
+</body>
+</html>
